--- a/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
+++ b/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
@@ -133,35 +133,42 @@ button[aria-label="Close"]:not(:disabled):active {
 }
 
 .option-conversation-list {
-    height: 12%;
+    height: 28px;
     width: 100%;
-    /* list-style-type: none; */
-    background-color: #ece8d8;
+    list-style-type: none;
+    background-color: #ece9d8;
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
     padding: 0;
     /* font-size: 50%; */
     align-items: center;
-    border-left: 4px solid #0831d9;
-    border-right: 4px solid #0831d9;
-    border-top: 1px solid #0831d9;
-
+    box-shadow: inset -1px 0px #00138c, 
+    inset 1px 0px #0831d9, 
+    inset -2px 0px #001ea0, 
+    inset 2px 0px #166aee, 
+    inset -3px 0px #003bda, 
+    inset 3px 0px #0855dd;    
+    padding-left: 7px;
 }
 
-/* .option-conversation-list * {
-    height: auto;
-    padding-right: 3%;
-    font-size: 0.8vw;
-    padding-left: 7px;
-} */
+.option-conversation-option {
+    width: 10%;
+    font-size: 13px;
+    text-align: center;
+}
 
-/* .option-conversation-list * {
-    height: auto;
-    padding-right: 3%;
-    font-size: 0.8vw; */
-    /* padding-left: 7px;
-} */
+@media (max-width: 1400px) {
+	.option-conversation-option {
+        font-size: 10px;
+	}
+}
+
+@media (max-width: 1000px) {
+	.option-conversation-option {
+        font-size: 8px;
+	}
+}
 
 .option-conversation-list .li-option-conversation-list-:hover {
     background-color: #333; /* Dark background color on hover */
@@ -172,34 +179,40 @@ button[aria-label="Close"]:not(:disabled):active {
     height: 68%;
     background: linear-gradient(180deg, rgba(182, 209, 238, 1) 0%, rgba(176, 212, 249, 1) 3%,
             rgba(248, 248, 250, 1) 20%, rgba(232, 238, 242, 1) 74%, rgba(224, 234, 239, 1) 100%);
-    border-radius: 5px;
+    /* border-radius: 5px; */
     box-shadow: 1px 1px 1px grey;
-    margin: 1px 2px 2px 2px;
+    /* margin: 1px 2px 2px 2px; */
     display: grid;
     grid-template-columns: repeat(50, 2%);
     grid-template-rows: repeat(50, 2%);
-
+    box-shadow: inset -1px 0px #00138c, 
+    inset 1px 0px #0831d9, inset -2px 0px #001ea0, 
+    inset 2px 0px #166aee, inset -3px 0px #003bda, 
+    inset 3px 0px #0855dd;
 }
 
 .profile-pic-messenger {
-    grid-row-start: 13;
+    grid-row-start: 10;
     grid-row-end: 42;
-    grid-column-start: 2;
+    grid-column-start: 5;
     grid-column-end: 9;
     background-color: black;
     border-radius: 5px;
 }
 
 .Your-profile-pic-topbar {
-    height: 100%;
-    width: 100%;
+    height: 85px;
+    width: 85px;
     border-radius: 5px;
+    margin-right: 10px;
+    border: 3px solid rgb(133, 183, 230);
+    -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0) 90%, rgba(0,0,0,0.4));
 }
 
 .user-informations {
     grid-row-start: 13;
     grid-row-end: 42;
-    grid-column-start: 12;
+    grid-column-start: 15;
     grid-column-end: 48;
     /* background-color: black; */
 }
@@ -220,14 +233,10 @@ button[aria-label="Close"]:not(:disabled):active {
     grid-column-end: 40;
 } */
 
-.conversations-list-header {
-    /* Your other styles */
-}
-
 /* Style for h2 and h3 inside .username-info */
 .username-info .status-online {
     font-size: 1rem;
-    color: green;
+    color: rgb(201, 201, 201);
     margin-left: 5px;
     /* To separate the name from the status */
 }
@@ -245,6 +254,20 @@ button[aria-label="Close"]:not(:disabled):active {
 .status-edit {
     font-size: 0.8rem;
     color: grey;
-    margin-top: 3px; /* Adjust as needed */
-    display: inline; /* Display on the same line */
-  }
+    margin-top: 5px; /* Adjust as needed */
+}
+
+.logo-msn-messenger {
+    height: 28px;
+    position: relative;
+    top: 5px;
+    grid-column-end: 51;
+    justify-self: end;
+}
+
+.triangle {
+    font-size: 9px;
+    margin-left: 5px;
+    display: inline;
+    color: black;
+}
