--- a/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
+++ b/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
@@ -1,15 +1,20 @@
 .conversation-list-summary {
     height: 75%;
     background-color: #ebeef3;
-    margin: 1px 2px 2px 2px;
+    /* margin: 1px 2px 2px 2px; */
     border-radius: 5px;
     display: row;
+    box-shadow: inset -1px -1px #00138c,
+    inset 1px 0px #0831d9, inset -2px -2px #001ea0, 
+    inset 2px 0px #166aee, inset -3px -3px #003bda, 
+    inset 3px 0px #0855dd;
 }
 
 .info-conversation-list {
     height: 10%;
-    width: 100%;
+    width: 98.7%;
     /* background-color: black; */
+    margin: 1px 2px 2px 2px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-left-radius: 5px;
@@ -38,7 +43,7 @@
 
 .display-list-convo {
     height: 70%;
-    width: 90%;
+    width: 89%;
     border-top-left-radius: 3%;
     background-color: #fffeff;
     margin-left: 10%;
@@ -65,11 +70,11 @@
 }
 
 .advertisement-scope {
-    height:20%;
-    width: 90%;
-    /* margin-bottom: 1%; */
-    /* margin-right: 1%; */
-    /* border-radius: 5px; */
+    height: 19%;
+    width: 89.5%;
+    margin-bottom: 1%;
+    margin-right: 1%;
+    border-radius: 5px;
     background-color: azure;
     margin-left: 10%;
     border-color: lightgrey;
@@ -79,7 +84,8 @@
     padding-bottom: 2%;
     display: flex;
     flex-direction: row;
-    gap: 50px;
+    justify-content: center;
+    gap: 5px;
 }
 
 .advertisement {
