--- a/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
+++ b/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
@@ -16,6 +16,7 @@
 
 .dropdown .option-conversation-option {
 	width: 100%;
+	height: 100%;
 }
 
 .dropdown .option-conversation-option li:hover {
@@ -36,7 +37,6 @@
 	padding: 0;
 	margin: 0;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-	display: none;
 	font-size: 13px;
 	z-index:2;
 }
@@ -51,7 +51,7 @@
 }
 
 /* Dropdown animation */
-.dropdown:hover .dropdown-menu {
+.dropdown:hover + .dropdown-menu {
 	display: block;
 	animation: fadeIn 0.2s ease-in-out;
 }
