--- a/Front/src/compenents/searchBar/searchBar.css
+++ b/Front/src/compenents/searchBar/searchBar.css
@@ -1,9 +1,9 @@
 .searchBar {
 	display: flex;
 	align-items: center;
-	justify-content: end;
+	/* justify-content: end; */
 	margin-right: 5px;
-	width: 50%;
+	width: 43%;
 	position: relative;
 }
 
@@ -28,7 +28,14 @@
 	margin-left: 10px;
 }
 
-.error {
-	color: red;
-	font-size: 14px;
+.searchBar-error {
+	color: black;
+	font-size: 11px;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 100%; 
+	background-color: #f9f4e1;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+	padding: 5px 10px;
 }
