--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -1,8 +1,8 @@
 .channel-main-container {
-	top: 20vh;
+	top: 5vh;
 	left: 60vw;
 	position: absolute;
-	height: 75vh;
+	height: 82vh;
 	width: 30vw;
 	display: flex;
 	flex-direction: column;
@@ -22,19 +22,21 @@
 	margin: 0;
 	padding: 0;
 	padding-right: 1.5%;
-	padding-left: 1.5%;;
+	padding-left: 1.5%;
+	;
 }
 
 #chat_icon {
 	/* position: inherit; */
 	height: 25px;
-	width: 25px;;
+	width: 25px;
+	;
 }
 
 .channel-conv-pfp {
 	height: 100%;
-    width: 100%;
-    border-radius: 5px;
+	width: 100%;
+	border-radius: 5px;
 }
 
 .chat-channel-area {
@@ -148,7 +150,8 @@
 	display: flex;
 	flex-direction: row;
 	padding-top: 2%;
-	padding-left: 2%;;
+	padding-left: 2%;
+	;
 }
 
 .channel-group-convo {
@@ -170,7 +173,7 @@
 	margin-left: 3%;
 	margin-right: 3%;
 	/* background-color: #f7eeb1; */
-	background-color: rgba(247,238,177, 0.9);
+	background-color: rgba(247, 238, 177, 0.9);
 	font-size: 8px;
 	/* background-color: black; */
 }
@@ -192,29 +195,30 @@
 	font-size: 10px;
 	list-style: none;
 	margin-left: 3%;
-	padding: 0; 
+	padding: 0;
 	list-style: none;
-    margin-left: 0px;
-    /* padding-left: 10px; */
+	margin-left: 0px;
+	/* padding-left: 10px; */
 }
 
 /*2*/
 
 .conv-sender-info-chan {
 	font-size: 13px;
-    font-weight: bold;
-    margin-right: 5px;
-    margin-left: 0px;
+	font-weight: bold;
+	margin-right: 5px;
+	margin-left: 0px;
 	/* font-size: 10px; */
-    color: #216ec0; /* Blue color for the sender's name */
+	color: #216ec0;
+	/* Blue color for the sender's name */
 }
 
 .conv-message-content-chan {
-    background-color: #f1f0f0;
+	background-color: #f1f0f0;
 	font-size: 16px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    /* margin-left: 6%; */
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	/* margin-left: 6%; */
 	padding-left: 8%;
 	width: 100%;
 	height: 15%;
@@ -222,19 +226,19 @@
 
 .conv-message-date-chan {
 	font-size: 12px;
-	color: #888; 
+	color: #888;
 }
 
 .channel-conversation-messages {
 	width: 100;
-    height: 100%;
-    background-color: #FCFDFF;
+	height: 100%;
+	background-color: #FCFDFF;
 	/* background-color: red; */
-    opacity: 0.7;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+	opacity: 0.7;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 	padding: 0;
-    overflow-y: auto;
+	overflow-y: auto;
 }
 
 .channel-conversation-messages::-webkit-scrollbar {
@@ -251,14 +255,56 @@
 	/* background-color: orange; */
 }
 
+#channels-more-options {
+	height: 25px;
+	width: 25px;
+	margin-left: 20%;
+}
+
 #channels-ban-user {
-	height: 15px;
-	width: 15px;
+	height: 30px;
+	width: 30px;
 }
 
 #channels-block-user {
 	height: 15px;
 	width: 15px;
+}
+
+.channels-more-options-dropdown {
+	position: relative;
+	background-color: #ece8d8;
+	border: 1px solid #808080;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+	padding: 10px;
+	z-index: 1000;
+	/* Ensure it's on top of other elements */
+}
+
+.channel-more-option-choose {
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.channel-more-option-choose-buttons {
+	list-style-type: none;
+	padding: 0;
+}
+
+.channel-more-option-choose-buttons button {
+	background-color: #ffffff;
+	border: 1px solid #808080;
+	padding: 5px 10px;
+	margin: 5px;
+	cursor: pointer;
+}
+
+.channel-more-option-choose-buttons button:hover {
+	background-color: #e0e0e0;
 }
 
 .channel-group-member-list-ul-li {
@@ -268,8 +314,8 @@
 	background-color: #fff;
 	border: 1px solid #ccc;
 	border-radius: 5px;
-	padding:0;
-	margin:0;
+	padding: 0;
+	margin: 0;
 	/* padding: 10px; */
 	margin: 5px 0;
 }
@@ -366,7 +412,9 @@
 	font-size: 15px;
 	margin: 0;
 	padding: 0;
-}/*channel-group-member-list-logo-name-pseudo*/
+}
+
+/*channel-group-member-list-logo-name-pseudo*/
 
 .channel-send-messages-part {
 	height: 25%;
@@ -414,7 +462,7 @@ textarea::-webkit-scrollbar {
 }
 
 .channel-down {
-	padding:0;
+	padding: 0;
 	width: 100%;
 	height: 5%;
 	display: flex;
@@ -445,8 +493,8 @@ textarea::-webkit-scrollbar {
 }
 
 span.channel-up-span[contenteditable]:empty::before {
-    content: 'Anything to say ?';
-    display: inline-block;
+	content: 'Anything to say ?';
+	display: inline-block;
 	cursor: text;
 	overflow-y: auto;
 }
