--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -1,29 +1,56 @@
 .channel-main-container {
 	top: 5vh;
 	left: 60vw;
-	position: absolute;
+	
+	position: fixed;
+
 	height: 82vh;
 	width: 30vw;
-	display: flex;
+
+	display: flex;	
 	flex-direction: column;
+	
 	border-radius: 5px;
+	box-shadow: inset -1px -1px #00138c, 
+	inset 1px 1px #0831d9, 
+	inset -2px -2px #001ea0, 
+	inset 2px 2px #166aee, 
+	inset -3px -3px #003bda, 
+	inset 3px 3px #0855dd;
+	
 	background-image: url('../../../img/chat/channel_wallpaper.png');
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 
 .channel-bandeau {
-	height: 5%;
+	height: 35px;
 	width: 100%;
-	background-color: #0054e8;
-	align-items: center;
+
+    background: linear-gradient(
+        180deg,
+        rgba(9, 151, 255, 1) 0%,
+        rgba(0, 83, 238, 1) 8%,
+        rgba(0, 80, 238, 1) 40%,
+        rgba(0, 102, 255, 1) 88%,
+        rgba(0, 102, 255, 1) 93%,
+        rgba(0, 91, 255, 1) 95%,
+        rgba(0, 61, 215, 1) 96%,
+        rgba(0, 61, 215, 1) 100%
+    );
+
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border: 1px solid #0831d9;
+
 	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
 	align-items: center;
+	list-style: none;
+
 	margin: 0;
 	padding: 0;
-	padding-right: 1.5%;
-	padding-left: 1.5%;
-	;
 }
 
 #chat_icon {
@@ -44,77 +71,87 @@
 	left: 60vw;
 }
 
-.channel-name {
-	flex: 1;
-	font-family: 'YourCustomFont', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 1rem;
-	font-weight: bold;
-	color: white;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-
-#chat_redcross {
-	position: inherit;
-	width: 25px;
-	height: 25px;
-}
-
-#chat_maximize {
-	position: inherit;
-	width: 25px;
-	height: 25px;
-}
-
-#chat_minimize {
-	position: inherit;
-	width: 25px;
-	height: 25px;
-}
-
-.channel-bandeau ul {
-	display: flex;
-	flex-direction: row;
-	justify-content: end;
-	list-style: none;
-	align-items: center;
-	margin-top: 1%;
-}
-
-.channel-actions {
+.channel-actions {	
 	cursor: pointer;
+
 	width: 100%;
 	height: 3%;
-	/* background-color: #f0ecf2; */
+
 	background-color: #ece8d8;
+
+	box-shadow: inset -1px 0px #00138c, 
+	inset 1px 0px #0831d9, 
+	inset -2px 0px #001ea0, 
+	inset 2px 0px #166aee, 
+	inset -3px 0px #003bda, 
+	inset 3px 0px #0855dd;
+}
+
+.channel-actions-menu {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	margin-right: 10px;
 }
 
 .channel-actions ul {
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	display: flex;
-	align-items: center;
+	
 }
 
 .channel-actions ul li {
-	margin-right: 10px;
-	/* Adjust the right margin for spacing */
+	padding-left: 10px;
+	cursor: pointer;
+	font-size: 13px;
 }
+
+.channel-dropdown-menu {
+	position: absolute;
+	background-color: #f9f4e1;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+	font-size: 13px;
+	z-index:2;
+
+	display: flex;
+	flex-direction: column;
+
+	left: 64px;
+;}
+
+.channel-dropdown-menu li {
+	padding: 10px 10px;
+	cursor: pointer;
+}
+
+.channel-dropdown-menu li:hover {
+	background-color: #e2dec6;
+  }
+
+  .channel-actions:hover + .channel-dropdown-menu {
+	display: block;
+	animation: fadeIn 0.2s ease-in-out;
+  }
+
+
+/*   //////////////////////   */
 
 .channel-modo-mode {
 	width: 100%;
 	height: 10%;
 	background-color: #4165b3;
 	border-radius: 5px;
-	/*faire effet de degrade*/
-	/*faire padding*/
 }
 
 .channel-modo-mode img {
 	height: 100%;
 	width: 100%;
+	object-fit: cover;
+	object-position: 12% 12%;
 }
 
 .channel-modo-mode ul {
