--- a/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
+++ b/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
@@ -13,14 +13,15 @@
 .info-conversation-list {
     height: 10%;
     width: 98.7%;
-    /* background-color: black; */
     margin: 1px 2px 2px 2px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 80px;
-    border: solid;
-    border-color: grey;
+    box-shadow: inset -1px -1px rgba(182, 209, 238, 1),
+    inset 1px 1px rgba(182, 209, 238, 1), inset -2px -2px #c2cee0, 
+    inset 2px 2px #c2cee0, inset -3px -3px #ebeef3, 
+    inset 3px 3px #ebeef3;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -35,10 +36,21 @@
     width: 20%;
 }
 
-.info-conversation-list ul li img{
-    height: 30px;
-    width: 30px;
-    margin-left: 10px;
+/* .info-conversation-list ul li {
+    height: 25px;
+    width: 25px;
+    margin-left: 15px;
+} */
+
+.chat_regularConv {
+    height: 25px;
+    width: 25px;
+    margin-left: 15px;  
+}
+
+.chat_regularConv2 {
+    height: 25px;
+    margin-left: 15px;  
 }
 
 .display-list-convo {
