--- a/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
+++ b/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
@@ -158,6 +158,10 @@ button[aria-label="Close"]:not(:disabled):active {
     text-align: center;
 }
 
+.option-conversation-option:first-letter {
+    text-decoration: underline;
+}
+
 @media (max-width: 1400px) {
 	.option-conversation-option {
         font-size: 10px;
@@ -210,6 +214,7 @@ button[aria-label="Close"]:not(:disabled):active {
     border-radius: 5px;
     margin-right: 10px;
     margin-left: 20px;
+    margin-top: 10px;
     border: 3px solid rgb(133, 183, 230);
     -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0) 90%, rgba(0,0,0,0.4));
     object-fit: cover;
