--- a/Front/src/compenents/utils/Wizz/Wizz.css
+++ b/Front/src/compenents/utils/Wizz/Wizz.css
@@ -1,8 +1,8 @@
-.shakeme {
+#shakeme {
     /* Start the shake animation and make the animation last for 0.5 seconds */
     animation: shake 0.2s;
     /* When the animation is finished, start again */
-    animation-iteration-count: infinite;
+    animation-iteration-count: 15;
 }
 
     @keyframes shake {
