--- a/Front/src/compenents/Messages/MessageInput.css
+++ b/Front/src/compenents/Messages/MessageInput.css
@@ -1,37 +1,18 @@
-.input-individual-conversation {
-    display: flex; /* Make the content inside the container flex */
-    flex-direction: row;
-	justify-content: space-between; /* Space evenly between the child elements (input and button) */
-    align-items: center; /* Center the content vertically */
-    background-color: #F5F5F5;
-    padding: 10px; /* Add padding around the content */
-    border-radius: 5px;
-    border: 1px solid #E0E0E0;
+.channel-input-text {
+	width: 64%;
 	height: 100%;
-	width: 100%;
 }
 
-.text-area-indiv {
-	display: block;
-    height: 100%;
-	width: 95%;
-	/* min-height: 7%; */
-	overflow: auto;
-	resize: none;
-	line-height: 20px;
-	max-height: 100%;
-	border: none;
-	/* Remove textarea border */
-	background-color: #fff;
-	font-family: Arial, sans-serif;
-	font-size: 14px;
-	opacity: 0.7;
+.channel-up-span {
+	height: 85%;
 }
 
-.text-area-indiv[contenteditable]:empty::before {
+
+span.text-area-indiv[contenteditable]:empty::before {
     content: 'Anything to say ?';
     display: inline-block;
 	cursor: text;
+	overflow-y: auto;
 }
 
 .text-area-indiv::-webkit-scrollbar {
@@ -39,7 +20,7 @@
 	cursor: pointer;
 }
 
-.input-individual-conversation button {
+.input-individual-conversation-button {
     background-color: #007BFF;
     color: #FFF;
     border: none;
@@ -48,10 +29,18 @@
     cursor: pointer;
 }
 
-.input-individual-conversation button:hover {
+.input-individual-conversation-button:hover {
     background-color: #0056b3;
 }
 
 .textarea {
 	white-space: pre-line;
+}
+
+.channel-down {
+	width: 100%;
+	height: 10%;
+	display: flex;
+	flex-direction: row-reverse;
+	/* justify-content: flex-end; */
 }
