--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -513,7 +513,7 @@
 }
 
 .channel-send-messages-part {
-	height: 25%;
+	height: 300px;
 	width: 100%;
 	display: flex;
 	padding-left: 2%;
@@ -540,7 +540,7 @@
 .channel-input-empty {
 	width: 100%;
 	height: 60%;
-	background-color: #fff;
+	/* background-color: #fff; */
 	opacity: 0.7;
 	order: 3;
 }
@@ -563,7 +563,7 @@ textarea::-webkit-scrollbar {
 }
 
 .channel-down {
-	background-color: #fff;
+	background-color: #ece8d8ea;
 	width: 100%;
 	/* opacity: 0.7; */
 	display: flex;
@@ -574,8 +574,8 @@ textarea::-webkit-scrollbar {
     border: 1px solid #93989C;
     background: #FBFBFB;
     box-shadow: -4px -4px 4px #C0C9E0 inset;
-    width: 58px;
-    height: 37px;
+    width: 48px;
+    height: 27px;
     border-radius: 5px;
     font-family: montserrat_xp;
     font-weight: bold;
@@ -589,7 +589,7 @@ textarea::-webkit-scrollbar {
 }
 
 .channel-down-button#wizz-button {
-    font-size: 20px;
+    font-size: 15px;
 }
 
 
