--- a/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
+++ b/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
@@ -474,7 +474,7 @@ input[type="radio"] {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: end;
+	justify-content: flex-end;
 	height: 50%;
 	gap: 5px;
 	margin-right: 15px;
