--- a/Front/src/compenents/Chat/DropdownContacts/DropdownContact.css
+++ b/Front/src/compenents/Chat/DropdownContacts/DropdownContact.css
@@ -284,7 +284,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: end;
+	justify-content: flex-end;
 	height: 50%;
 	gap: 5px;
 	margin-right: 15px;
