--- a/Front/src/compenents/searchBar/searchBar.css
+++ b/Front/src/compenents/searchBar/searchBar.css
@@ -1,7 +1,6 @@
 .searchBar {
 	display: flex;
 	align-items: center;
-	/* justify-content: end; */
 	margin-right: 5px;
 	width: 43%;
 	position: relative;
@@ -28,7 +27,7 @@
 
 	display: flex;
 	flex-direction: row;
-	justify-content: end;
+	justify-content: flex-end;
 	align-items: center;
 }
 
