--- a/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
+++ b/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
@@ -65,7 +65,6 @@
     border-top-right-radius: 5px;
     background-color: #e8f0fc;
     font-size: 0.8em;
-
     padding-left: 15px;
     padding-top: 7px;
 }
@@ -74,6 +73,38 @@
     font-weight: bold;
 }
 
+.channel-infos-user-name {
+    cursor: pointer;
+}
+.channel-down-button-3 {
+    border: 1px solid #93989C;
+    background: #FBFBFB;
+    box-shadow: -4px -4px 4px #C0C9E0 inset;
+    width: 88px;
+    height: 27px;
+    border-radius: 5px;
+    font-family: montserrat_xp;
+    font-weight: bold;
+    font-size: 9px;
+    color: #969C9A;
+	z-index: 1;
+	margin-right: 5px;
+	margin-bottom: 5px;
+	order: 1;
+    cursor: pointer;
+}
+
+.channel-down-button-3:hover {
+	background-color: #e0e0e0;
+}
+
+.channel-down-buttons-3 {
+    margin-top: 20px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .convo-channel-info {
 	width: 15px;
 	height: 15px;
@@ -86,7 +117,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 10%;
+    height: 35px;
     border: solid;
     border-width: 1px;
     border-color: grey;
