--- a/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
+++ b/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
@@ -92,8 +92,10 @@
 }
 
 #icon-conv-img {
-    margin-left: 2%;;
-    margin-right: 2%;;
+    margin-left: 2%;
+    margin-right: 2%;
+    width: 15px;
+    height: 15px;
 }
 
 .channel-li-convo{
@@ -109,6 +111,9 @@
 #icon-channels-img {
     margin-left: 2%;;
     margin-right: 2%;;
+
+    width: 15px;
+    height: 15px;
 }
 
 .channel-li-channels {
@@ -130,6 +135,9 @@
 #icon-friends {
     margin-left: 2%;
     margin-right: 2%;
+
+    width: 15px;
+    height: 15px;
 }
 
 .advertisement-scope {
