--- a/Front/src/compenents/Profile/Profile.css
+++ b/Front/src/compenents/Profile/Profile.css
@@ -104,7 +104,7 @@
 	width: 10vw;
 
 	position: absolute;
-	top: 0.5%;
+	top: 1.8%;
 	right: 5%;
 }
 
@@ -260,7 +260,7 @@
     justify-content: center;
     flex-direction: column;
 	align-items: center;
-	gap: 8px;
+	/* gap: 8px; */
 }
 
 .profile-btn-1, .twofa_off {
